directory styling. fix spacing issues & good here

--- a/bored-game/css/style.css
+++ b/bored-game/css/style.css
@@ -839,13 +839,7 @@ option:active {
   font-weight: 600;
 }
 
-.sortby {
 
-}
-
-.advanced-search {
-
-}
 
 .directory-card-wrapper {
   display: flex;
